Fix bug in firefox where the logo was stretching

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -169,8 +169,6 @@ nav {
     a.brand {
         float: left;
         position: fixed;
-        display: flex;
-        align-items: center;
         left: 8.5298%;
         margin-top: 22px;
         text-decoration: none !important;
